wordpress-devops/terraform/security.tf
# Create security group
resource "aws_security_group" "wordpress" {

  name        = "wordpress-sg"
  description = "Security group for WordPress server"
  vpc_id      = aws_vpc.main.id

  # Allow SSH
  ingress {
    description = "SSH"

    from_port = 22
    to_port   = 22
    protocol  = "tcp"

    cidr_blocks = ["0.0.0.0/0"]
  }

  # Allow HTTP
  ingress {
    description = "HTTP"

    from_port = 80
    to_port   = 80
    protocol  = "tcp"

    cidr_blocks = ["0.0.0.0/0"]
  }

  # Allow HTTPS
  ingress {
    description = "HTTPS"

    from_port = 443
    to_port   = 443
    protocol  = "tcp"

    cidr_blocks = ["0.0.0.0/0"]
  }
  
  ingress {
    description = "webserver"
    from_port = 8080
    to_port = 8080
    protocol = "tcp"

    cidr_blocks = ["0.0.0.0/0"]

  }

  # Allow all outbound traffic
  egress {

    from_port = 0
    to_port   = 0

    protocol = "-1"

    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name        = "${var.project_name}-sg"
    Environment = "Dev"
    ManagedBy   = "Terraform"
  }
}
